# ComfyUI-BrainDead

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
api/: BD-autorig_anim_retarget.api.json  BD-autorig_hymotion.api.json  BD-autorig_mia_to_uefn.api.json  BD-autorig_mia_uefn_full.api.json  BD-autorig_rig_preview.api.json  BD-parts_builder.api.json  BD-trellis2_unreal_fbx.api.json
build_three_bundle/: entry.js  package-lock.json  package.json  webpack.config.js
config/: parts_categories_character.txt
docs/: MIGRATION_TRIMESH_TO_MESH.md  face-wrap.md
docs/BD_MeshInspector/: en.md
example_workflows/: BD-CubePart_Part_Decomposition.json  BD-atlas_flipbook.json  BD-autorig_anim_retarget.json  BD-autorig_hymotion.json  BD-autorig_mia_to_uefn.json  BD-autorig_mia_uefn_full.json  BD-autorig_rig_preview.json  BD-background_removal.json  BD-channel_operations.json  BD-character_consistency.json  BD-clothing_remover.json  BD-facewrap_pipeline.json  BD-game_engine_packing.json  BD-isolate_part.json  BD-parts_builder.json  BD-pbr_from_image.json  BD-pixal3d_image_to_3d.json  BD-sam3_parts_segmentation.json  BD-trellis2_shape_to_texture.json  BD-trellis2_unreal_fbx.api.json  BD-trellis2_unreal_fbx.json  CubePart_Part_Decomposition.json  README.md  character_consistency.json  face_segmentation.json  facewrap_pipeline.json  glsl_skin_tinting.json  lotus2_depth_normal.json  mask_tools.json  ovoxel_pbr_bake.json  pixal3d_image_to_3d.json  sam3_parts_segmentation.json  trellis2_shape_to_texture.json
lib/autorig/: ATTRIBUTION.md  mia_inference.py
lib/blender/: anim_retarget.py  rig_preview.py  uefn_skeletonize.py
lib/facewrap/: NOTICE.md
nodes/: __init__.py
nodes/autorig/: __init__.py  anim_retarget.py  bone_remap.py  mia_autorig.py  rig_preview.py  uefn_skeleton.py  unirig_autorig.py
nodes/blender/: __init__.py  addon_nodes.py  base.py  decimate.py  decimate_full.py  export_mesh.py  planar_normals.py  remesh.py  repair.py  transfer.py
nodes/cache/: __init__.py  alpha_save.py  base.py  base_v3.py  core.py  file_ops.py  save_batch.py  save_context.py  workflow.py
nodes/character/: __init__.py  qwen_tokenizer.py
nodes/cubepart/: __init__.py  getpart.py  segment.py  utils.py
nodes/depth/: __init__.py  lotus2.py
nodes/facewrap/: __init__.py  confidence_blend.py  face_feature_coords.py  face_fit.py  face_mesh.py  flame_fit.py  landmarks.py  landmarks_to_sam3.py  mosaic_stitch.py  qwen_composite.py  strip_stitch.py  texture_bake.py  types.py  uv_transfer.py
nodes/glsl/: __init__.py  glsl_batch.py
nodes/mesh/: __init__.py  bake.py  bake_vertex_colors.py  bundle.py  cache.py  color_field.py  detail_normal.py  edge_utils.py  export.py  export_bundle.py  fix_normals.py  grouping.py  inspector.py  interop.py  orient.py  ovoxel_bake.py  ovoxel_convert.py  ovoxel_io.py  ovoxel_texture_bake.py  planar_grouping.py  preview.py  preview_3d.py  processing.py  sampling.py  simplify.py  transfer.py  types.py  unwrap.py
nodes/pixal3d/: __init__.py  generate.py  preprocess.py  utils.py
nodes/prompt/: __init__.py
nodes/segmentation/: __init__.py  _segformer.py  atlas_pack.py  atr_parser.py  bd_face_parse.py  bd_sam3.py  center_median_luma.py  channel_merge.py  cleanup.py  color_extract.py  crop_and_center.py  crop_to_mask.py  depth_to_shadow_map.py  derive_pbr.py  draw_ellipse.py  draw_rect.py  face_mask_mediapipe.py  face_mp_data_io.py  face_mp_export.py  face_mp_sam3.py  face_mp_shared.py  face_skin_refine.py  face_socket_infill.py  fashn_parser.py  head_cutout.py  image_to_greyscale.py  labels.py  luma_stats.py  luminance_mask.py  mask_batch_index.py  mask_color_fill.py  mask_correlate.py  mask_fill_holes.py  mask_flatten.py  mask_resolver.py  mask_split.py  matting.py  mouth_parts.py  normalize_luma.py  pack_channels.py  (+14 more)
nodes/trellis2/: __init__.py  cache.py  conditioning.py  info.py  loader.py  shape.py  texture.py
tools/: audit_workflows.py  build_correspondence.py  build_flipbook_template.py  build_isolate_part_template.py  build_packing_template.py  build_packing_thumbnail_bg.py  build_pixal3d_textured_template.py  build_trellis_unreal_fbx_template.py  convert_flame.py  export_api.py  flatten_subgraph.py  make_thumbnail.py  preprocess_ict.py  regen_all_thumbnails.py  run_bd.py  run_character_parts.py  run_part_to_3d.py  run_parts_builder.py  run_strip_and_turn.py  run_unreal_fbx.py
utils/: __init__.py  luma.py  shared.py
web/: viewer_inspector.html
web/docs/: BD_BlenderDecimate.md  BD_BlenderPlanarNormals.md  BD_CenterMedianLuma.md  BD_ChannelMerge.md  BD_ColorExtract.md  BD_CuMeshSimplify.md  BD_DepthToShadowMap.md  BD_DerivePBR.md  BD_DrawEllipse.md  BD_DrawRect.md  BD_ExportOVoxel.md  BD_FaceSkinRefine.md  BD_FaceSocketInfill.md  BD_GLSLBatch.md  BD_ImageToGreyscale.md  BD_LoadMPFaceData.md  BD_LoadOVoxel.md  BD_LumaStats.md  BD_LuminanceMask.md  BD_MaskColorFill.md  BD_MaskCorrelate.md  BD_MaskFlatten.md  BD_MaskResolver.md  BD_MediaPipeFaceExport.md  BD_MediaPipeFaceMask.md  BD_MediaPipeSAM3FaceSegment.md  BD_MouthParts.md  BD_NormalizeLuma.md  BD_OVoxelBake.md  BD_OVoxelTextureBake.md  BD_PackBundle.md  BD_PackChannels.md  (+11 more)
(+10 files in other folders)
