[project]
name = "comfyui-braindead"
version = "1.1.1"
description = "Comprehensive ComfyUI nodes for 3D mesh processing, PBR texture baking, caching, character consistency, and prompt iteration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "BizaNator", email = "bizanator@braindeadguild.com"}
]
maintainers = [
    {name = "BizaNator", email = "bizanator@braindeadguild.com"}
]
keywords = [
    "comfyui",
    "3d-mesh",
    "pbr-textures",
    "trellis2",
    "voxelgrid",
    "mesh-decimation",
    "uv-unwrap",
    "blender",
    "caching",
    "qwen",
    "character-consistency",
    "prompt-iterator"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Environment :: GPU :: NVIDIA CUDA",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
mesh = ["trimesh"]

[project.urls]
Homepage = "https://github.com/BizaNator/ComfyUI-BrainDead"
Repository = "https://github.com/BizaNator/ComfyUI-BrainDead"
Issues = "https://github.com/BizaNator/ComfyUI-BrainDead/issues"

[tool.comfy]
PublisherId = "braindead"
DisplayName = "BrainDead Nodes"
